JS btn Colorear Lab07

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                     <span class="title is-1 has-text-link-light">Denis</span>
                     <ul class="nav_ul">
                         <li class="nav_li">
+                            <a href="lab07.html" class="w3-bar-item">Lab07</a>
+                        </li>
+                        <li class="nav_li">
                             <a href="carta05.html" class="w3-bar-item">Carta</a>
                         </li>
                         <li class="nav_li">
