--- a/lab07.html
+++ b/lab07.html
@@ -22,11 +22,11 @@
                 </div>
             </div>
             <div class="but">
-                <button type="button" id="extraer">Extraer</button>
+                <button type="button" id="extraer" >Extraer</button>
                 <button type="button" id="colorear">Colorear</button>
             </div>
         </section>
-        <section >
+        <section>
             <div class="salida_datos_1">
                 <div class="cont">
                     <p>Apellidos paterno:</p>
@@ -56,5 +56,6 @@
                 </div>
             </div>
         </section>
+        <script src="scripts/lab07.js"></script>
     </body>
 </html>
