--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
                     <span class="title is-1 has-text-link-light">Denis</span>
                     <ul class="nav_ul">
                         <li class="nav_li">
+                            <a href="lab07.html" class="w3-bar-item">Lab07</a>
+                        </li>
+                        <li class="nav_li">
                             <a href="carta05.html" class="w3-bar-item">Carta</a>
                         </li>
                         <li class="nav_li">
@@ -38,7 +41,8 @@
                         <form action="/">
                             <div class="form-inner">
                                 <h1>Dejame un mensaje</h1>
-                                <input type="text" placeholder="nombre de usuario">
+                                <input type="text" placeholder="nombre de
+                                    usuario">
                                 <input type="email" placeholder="E-mail">
                                 <textarea placeholder="Mesaje..." rows="5"></textarea>
                                 <button type="submit" href="/">enviar</button>
