JS btn Extraer Lab07

--- a/lab07.html
+++ b/lab07.html
@@ -12,17 +12,17 @@
             <div class="entrada">
                 <div class="cont">
                     <p>Apellidos y nombres:</p>
-                    <input type="text"
+                    <input type="text" id="inp_nombres"
                         placeholder="Ingrese_apellidos_y_nombres">
                 </div>
                 <div class="cont">
                     <p>Fecha de nacimiento:</p>
-                    <input type="text"
+                    <input type="date" id="inp_fecha"
                         placeholder="Ingrese_fecha_de_nacimiento">
                 </div>
             </div>
             <div class="but">
-                <button type="button" id="extraer" >Extraer</button>
+                <button type="button" id="extraer">Extraer</button>
                 <button type="button" id="colorear">Colorear</button>
             </div>
         </section>
