segundo commit practica

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <span class="title is-1 has-text-link-light">Denis</span>
                     <ul class="nav_ul">
                         <li class="nav_li">
+                            <a href="practicanoviembre/bueno.html"
+                                class="w3-bar-item">Practica</a>
+                        </li>
+                        <li class="nav_li">
                             <a href="lab07.html" class="w3-bar-item">Lab07</a>
                         </li>
                         <li class="nav_li">
@@ -83,7 +87,7 @@
                                 width="80px" class="w3-display-container">
                             <h3 class="subtitle has-text-link-light">Diseño
                                 grafico</h3>
-                            </div>
+                        </div>
                         <p class="w3-opacity">Me agrada el diseño grafico
                             porque
                             es
