--- a/practicanoviembre/bueno.html
+++ b/practicanoviembre/bueno.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practica</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Practica</title>
+        <link rel="stylesheet" href="../practicanoviembre/styles/bueno.css">
+    </head>
+    <body>
+        <section>
+            <div class="contenedor">
+                <h2>Desde <span>Sectores y Empresa</span></h2>
+                <div class="etiquet">
+                    <button type="button">Inmobiliario</button>
+                    <button type="button">☼</button>
+                </div>
+                <div class="cont_img">
+                    <img src="../practicanoviembre/images/inmobiliario.jpg"
+                        alt="">
+                </div>
+
+                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
+                    precio</h3>
+                <p>el segmento de sus primeras señales de recuperacion. aunque
+                    el
+                    valor del metro cuadrado es Lima TOP seguira bajo por
+                    algunos
+                    meses mas</p>
+                <p>♠ Lectura de 3 min</p>
+            </div>
+            <div class="contenedor">
+                <h2>Desde <span>Management</span></h2>
+                <div class="etiquet">
+                    <button type="button">Talento y cultura</button>
+                    <button type="button">☼</button>
+                </div>
+                <div class="cont_img">
+                    <img src="../practicanoviembre/images/talento y cultura.jpg"
+                        alt="">
+                </div>
+                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
+                    precio</h3>
+                <p>el segmento de sus primeras señales de recuperacion. aunque
+                    el
+                    valor del metro cuadrado es Lima TOP seguira bajo por
+                    algunos
+                    meses mas</p>
+                <p>♠ Lectura de 3 min</p>
+            </div>
+            <div class="contenedor">
+                <h2>Desde <span>Legala y Politica</span></h2>
+                <div class="etiquet">
+                    <button type="button">Politica</button>
+                    <button type="button">☼</button>
+                </div>
+                <div class="cont_img">
+                    <img src="../practicanoviembre/images/politica.jpg" alt="">
+                </div>
+                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
+                    precio</h3>
+                <p>el segmento de sus primeras señales de recuperacion. aunque
+                    el
+                    valor del metro cuadrado es Lima TOP seguira bajo por
+                    algunos
+                    meses mas</p>
+                <p>♠ Lectura de 3 min</p>
+            </div>
+            <div class="contenedor">
+                <h2>Desde <span>Sectores y Empresa</span></h2>
+                <div class="etiquet">
+                    <button type="button">Turismo</button>
+                    <button type="button">☼</button>
+                </div>
+                <div class="cont_img">
+                    <img src="../practicanoviembre/images/turismo.jpg" alt="">
+                </div>
+                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
+                    precio</h3>
+                <p>el segmento de sus primeras señales de recuperacion. aunque
+                    el
+                    valor del metro cuadrado es Lima TOP seguira bajo por
+                    algunos
+                    meses mas</p>
+                <p>♠ Lectura de 3 min</p>
+            </div>
+        </section>
+
+    </body>
 </html>
