Tercer avance practica

--- a/practicanoviembre/bueno.html
+++ b/practicanoviembre/bueno.html
@@ -9,10 +9,10 @@
     <body>
         <section>
             <div class="contenedor">
-                <h2>Desde <span>Sectores y Empresa</span></h2>
+                <h2>Desde <span class="color_ti1">Sectores y Empresa</span></h2>
                 <div class="etiquet">
-                    <button type="button">Inmobiliario</button>
-                    <button type="button">☼</button>
+                    <button type="button" id="imb">Inmobiliario</button>
+                    <button type="button" class="tag" id="tag1">☼</button>
                 </div>
                 <div class="cont_img">
                     <img src="../practicanoviembre/images/inmobiliario.jpg"
@@ -26,64 +26,57 @@
                     valor del metro cuadrado es Lima TOP seguira bajo por
                     algunos
                     meses mas</p>
-                <p>♠ Lectura de 3 min</p>
+                <p class="time" id="time1">♠ Lectura de 3 min</p>
             </div>
             <div class="contenedor">
-                <h2>Desde <span>Management</span></h2>
+                <h2>Desde <span class="color_ti2">Management</span></h2>
                 <div class="etiquet">
-                    <button type="button">Talento y cultura</button>
-                    <button type="button">☼</button>
+                    <button type="button" id="Talento">Talento y cultura</button>
+                    <button type="button" class="tag" id="tag2">☼</button>
                 </div>
                 <div class="cont_img">
                     <img src="../practicanoviembre/images/talento y cultura.jpg"
                         alt="">
                 </div>
-                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
-                    precio</h3>
-                <p>el segmento de sus primeras señales de recuperacion. aunque
-                    el
-                    valor del metro cuadrado es Lima TOP seguira bajo por
-                    algunos
-                    meses mas</p>
-                <p>♠ Lectura de 3 min</p>
+                <h3>El nuevo CEO de Delosi y otras movidas empresariales</h3>
+                <p>Ka Perú. EY Peru y DLA Piper Peru también realizaron nuevos
+                    nombramientos</p>
+                <p class="time" id="time2">♠ Lectura de 2 min</p>
+                <p id="fech"></p>
             </div>
             <div class="contenedor">
-                <h2>Desde <span>Legala y Politica</span></h2>
+                <h2>Desde <span class="color_ti3">Legala y Politica</span></h2>
                 <div class="etiquet">
-                    <button type="button">Politica</button>
-                    <button type="button">☼</button>
+                    <button type="button" id="pol">Politica</button>
+                    <button type="button" class="tag" id="tag3">☼</button>
                 </div>
                 <div class="cont_img">
                     <img src="../practicanoviembre/images/politica.jpg" alt="">
                 </div>
-                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
-                    precio</h3>
-                <p>el segmento de sus primeras señales de recuperacion. aunque
-                    el
-                    valor del metro cuadrado es Lima TOP seguira bajo por
-                    algunos
-                    meses mas</p>
-                <p>♠ Lectura de 3 min</p>
+                <h3>(Editorial ¿Y la sensatez económica?</h3>
+                <p>LA VOZ DE SE. Las agendas politicas a nivel regional y
+                    parlamentario comprometen la recuperacion economica gobierno
+                    debe agotar todo esfuerzo para reutralizarias</p>
+                <p class="time" id="time3">♠ Lectura de 3 min</p>
             </div>
             <div class="contenedor">
-                <h2>Desde <span>Sectores y Empresa</span></h2>
+                <h2>Desde <span class="color_ti4">Sectores y Empresa</span></h2>
                 <div class="etiquet">
-                    <button type="button">Turismo</button>
-                    <button type="button">☼</button>
+                    <button type="button" id="tur">Turismo</button>
+                    <button type="button" class="tag" id="tag4">☼</button>
                 </div>
                 <div class="cont_img">
                     <img src="../practicanoviembre/images/turismo.jpg" alt="">
                 </div>
-                <h3>Vivienda recidencial: avanza las ventas, pero todavia no el
-                    precio</h3>
-                <p>el segmento de sus primeras señales de recuperacion. aunque
-                    el
-                    valor del metro cuadrado es Lima TOP seguira bajo por
-                    algunos
-                    meses mas</p>
-                <p>♠ Lectura de 3 min</p>
+                <h3>Reapertura de fronteras: hoy inicia la reactivación del
+                    circuito turístico regional</h3>
+                <p>La regreso de los vuelos internacionales, desde el de octubre
+                    es el coste de la transición de la reactivación turistica
+                    interna a la regional Sin embargo, algunos factores pueden
+                    retr.</p>
+                <p class="time" id="time4">♠ Lectura de 3 min</p>
             </div>
         </section>
-
+        <script src="../practicanoviembre/scripts/bueno.js"></script>
     </body>
 </html>
